2012-12-10  Beth Dakin  <bdakin@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=104602
        DidHitRelevantRepaintedObjectsAreaThreshold LayoutMilestone fires too 
        early on some pages with iframes

        Reviewed by Simon Fraser.

        This change makes it so that any RenderObjects inside iframes are not 
        considered relevant.
        * page/Page.cpp:
        (WebCore::Page::addRelevantRepaintedObject):

2012-12-10  David Grogan  <dgrogan@chromium.org>

        IndexedDB: Propagate more leveldb errors to script
        https://bugs.webkit.org/show_bug.cgi?id=104422

        Reviewed by Tony Chang.

        These are the last places that ignore leveldb errors that can get the
        usual ok/found treatment.

        Nothing called getBool, so it is deleted.

        * Modules/indexeddb/IDBBackingStore.cpp:
        (WebCore):
        (WebCore::getInt):
        (WebCore::isSchemaKnown):
        (WebCore::setUpMetadata):
        (WebCore::getMaxObjectStoreId):
        (WebCore::IDBBackingStore::open):
        (WebCore::IDBBackingStore::getIDBDatabaseMetaData):
        (WebCore::getNewDatabaseId):
        (WebCore::IDBBackingStore::createIDBDatabaseMetaData):
        (WebCore::setMaxObjectStoreId):
        (WebCore::getNewVersionNumber):
        (WebCore::IDBBackingStore::putRecord):
        (WebCore::setMaxIndexId):
        * Modules/indexeddb/IDBBackingStore.h:
        (IDBBackingStore):
        * Modules/indexeddb/IDBObjectStoreBackendImpl.cpp:
        (WebCore::IDBObjectStoreBackendImpl::setIndexKeys):
        (WebCore::IDBObjectStoreBackendImpl::ObjectStoreStorageOperation::perform):

2012-12-09  Antti Koivisto  <antti@apple.com>

        Factor node traversal into standalone functions
        https://bugs.webkit.org/show_bug.cgi?id=104507

        Reviewed by Eric Seidel.

        Node traversal functions are currently Node and ContainerNode members. Their implementations